--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=tingeso1
-
 server.port = 8090
+server.servlet.session.timeout=30m
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/tingeso1
+#spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/tingeso1
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/tingeso1
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
