--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-spring.application.name=tingeso1
+spring.application.name=prestabanco1
 server.port = 8090
 server.servlet.session.timeout=30m
 
-#spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/tingeso1
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/tingeso1
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/prestabancodb
+#spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/prestabancodb
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
