--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,9 @@ server.port = 8090
 server.servlet.session.timeout=30m
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/prestabancodb
-#spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/prestabancodb
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
 spring.datasource.driver-class-name=org.postgresql.Driver
