--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.session.timeout=30m
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/prestabancodb
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 spring.datasource.driver-class-name=org.postgresql.Driver
